lab 4/k8s_v1/ticketservice/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tickets-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/tickets
            pathType: "Prefix"
            backend:
              service:
                name: tickets
                port:
                  number: 80
